k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: job-platform
  labels:
    name: job-platform
